--- a/02_prompt_condicional/index.html
+++ b/02_prompt_condicional/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba JS</title>
+    <title>02 - prompt condicional</title>
 </head>
 <body>
-    <h1>PRUEBA CODIGO JS</h1>
+    <h1>02 - prompt condicional</h1>
     <script src="inicio.js"></script>
 </body>
 </html>
