--- a/07_funciones_flecha/index.html
+++ b/07_funciones_flecha/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>06 - Funciones</title>
+    <title>07 - Funciones flecha</title>
 </head>
 <body>
     <h1>Practica 07 - Funciones Flecha</h1>
