referencias prospectos desafio entregable 1

--- a/08_desafio_entregable_1_simulador/index.html
+++ b/08_desafio_entregable_1_simulador/index.html
@@ -79,6 +79,16 @@
           <h5 class="text-center text-dark bg-warning py-2">ACLARACIÓN: para un adecuado funcionamiento de la aplicación, reinicie la misma luego de efectuar un calculo de dosis</h5>
           <script class="display-6 py-2 text-center" src="script.js"></script>
       </div>
+      <div class="container text-white">
+          <p class="">
+          REFERENCIAS:
+          
+          <a href="https://www.benadryl.com.ar/assets/prospectos/Benadryl-Jbe-Iny-Caps-Prospecto-ELEA.pdf" target="_blank" rel="noopener noreferrer">Prospecto BENADRYL </a>
+          <a href="https://www.roemmers.com.ar/sites/default/files/P_000001132408.pdf" target="_blank" rel="noopener noreferrer">Prospecto FEBRATIC </a>
+          <a href="https://gskpro.com/content/dam/global/hcpportal/es_AR/pdfs/homepage/products/ventolin/Ventolin_solucion_para_nebulizar_SmPC_UK_Julio_2015_clean.pdf" target="_blank" rel="noopener noreferrer">Prospecto VENTOLIN</a>
+      </p>
+      </div>
+      
 
       <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
