--- a/08_desafio_entregable_1_simulador/index.html
+++ b/08_desafio_entregable_1_simulador/index.html
@@ -29,7 +29,7 @@
     <!--INTERACCIÓN CON USUARIO-->
     <div class="container-lg  text-white py-4 my-2">
             <h3>Seleccione el medicamento:</h3>
-            <select id="medicamento" class="form-select" multiple aria-label="medicamento" >
+            <select id="medicamento" class="form-select" aria-label="medicamento" >
                 <option value="ventolin">VENTOLIN - Salbutamol 5mg/ml gotas</option>
                 <option value="benadryl">BENADRYL - Difenhidramina CIH Jarabe</option>
                 <option value="febratic">FEBRATIC - Ibuprofeno 4% Jarabe</option>
