correccion 1 desafio arrays

--- a/13_Desafio_Complementario_incorporar_arrays/index.html
+++ b/13_Desafio_Complementario_incorporar_arrays/index.html
@@ -110,7 +110,7 @@
 				</table>
 				<br />
 			</div>
-			<div class="fondonegro container d-flex justify-content-center">
+			<div class="fondonegro container-fluid d-flex justify-content-center">
 				<button
 					id="botonAgregar"
 					class="btn btn-lg btn-primary my-2"
