fix fondo blanco desafio arrays

--- a/13_Desafio_Complementario_incorporar_arrays/index.html
+++ b/13_Desafio_Complementario_incorporar_arrays/index.html
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="col">
 						<h4>Practica 13 - DESAFIO COMPLEMENTARIO - INCORPORAR ARRAYS</h4>
-						<h1 class="textogradiente display-1">Compras 0.1</h1>
+						<h1 class="textogradiente lead p-4 display-1">COMPRAS 0.1</h1>
 						<p class="display-6 text-white">
 							Aplicación para generar listas de compras e imprimirlas
 						</p>
@@ -85,7 +85,7 @@
 					class="form-control mr-2 ml-2"
 				/>
 
-				<div class="d-flex justify-content-center">
+				<div class="py-4 d-flex justify-content-center">
 					<button
 						id="botonAgregar"
 						class="btn btn-lg btn-primary my-2"
@@ -110,7 +110,7 @@
 				</table>
 				<br />
 			</div>
-			<div class="fondonegro container-fluid d-flex justify-content-center">
+			<div class="fondonegro py-4 container-fluid d-flex justify-content-center">
 				<button
 					id="botonAgregar"
 					class="btn btn-lg btn-primary my-2"
