--- a/11_arrays/index.html
+++ b/11_arrays/index.html
@@ -15,7 +15,7 @@
         }
     </style>
     <h1>Practica 11 - Arrays</h1>
-    <h2>ACLARACIÓN: ESTE EJEMPLO FALTA VERIFICAR Y TERMINAR DE EDITAR</h2>
+    <h2>Para ver el resultado de los ejemplos, por favor inicie la consola del navegador.</h2>
     
     <script src="script.js"></script>
 </body>
