--- a/03_contador/index.html
+++ b/03_contador/index.html
@@ -30,7 +30,7 @@
 
 
   <!-- Modal -->
-  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keytablero="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content bg-dark">
